[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_GUI/Red_PactSinglePanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_IconSymbol.png" type="Texture" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_GUI/Red_PactWholePanel.gd" type="Script" id=3]

[node name="Red_PactWholePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 448.0
margin_bottom = 306.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 448.0
margin_bottom = 306.0
mouse_filter = 2
custom_constants/separation = 0

[node name="UnswornPactList" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 200.0
header_title = "Unsworn"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_top = 135.0
margin_right = 248.0
margin_bottom = 171.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 2 )

[node name="SwornPactList" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_right = 448.0
header_title = "Sworn"
[connection signal="pact_card_clicked" from="VBoxContainer/HBoxContainer/UnswornPactList" to="." method="_on_UnswornPactList_pact_card_clicked"]
[connection signal="pact_card_removed" from="VBoxContainer/HBoxContainer/SwornPactList" to="." method="_on_SwornPactList_pact_card_removed"]
